# array-api-typing

./: .all-contributorsrc  .copier-answers.yml  .dprint.jsonc  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  conftest.py  lefthook.yml  pyproject.toml  setup.py
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  upgrader.yml
docs/: conf.py  index.md  installation.md  usage.md
src/array_api_typing/: __init__.py  __main__.py  _array.py  _array_docstrings.toml  _device.py  _dtype.py  _misc.py  _misc_objects.py  _namespace.py  _simple.py  _utils.py
src/array_api_typing/signature_types/: __init__.py  _signature_types.py
tests/: .ruff.toml  test_cli.py  test_dunder_main.py  test_main.py  test_namespace.py
tests/integration/: .ruff.toml  test_dask.pyi  test_jax0p6.pyi  test_numpy.pyi  test_numpy1.pyi  test_numpy1p0.pyi  test_numpy2.pyi  test_numpy2p0.pyi  test_numpy2p2.pyi
tests/runtime/: test_namespace.py
